% Generated by roxygen2: do not edit by hand
% Please edit documentation in R/BWStest.r
\name{BWStest-NEWS}
\alias{BWStest-NEWS}
\title{News for package 'BWStest':}
\description{
News for package 'BWStest'

\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\newcommand{\cranBWStest}{\CRANpkg{BWStest}}
\newcommand{\BWStest}{\href{https://github.com/shabbychef/BWStest}}
}
\section{\BWStest{} Initial Version 0.1.0 (2016-04-07) }{

\itemize{
\item First CRAN release.
}
}

\section{\BWStest{} Initial Version 0.0.0 (2016-04-06) }{

\itemize{
\item Start work
}
}
