@@ -3,9 +3,11 @@
 export(bws_cdf)
 export(bws_stat)
 export(bws_test)
+export(murakami_cdf)
 export(murakami_stat)
 export(murakami_stat_parts)
 exportPattern("^[[:alpha:]]+")
 import(Rcpp)
 importFrom(Rcpp,evalCpp)
+importFrom(stats,ecdf)
 useDynLib(BWStest)
