@@ -1,11 +1,20 @@
-# /usr/bin/r
-#
-# Created: 2016.04.06
-# Copyright: Steven E. Pav, 2016
-# Author: Steven E. Pav <steven@corecast.io>
-# Comments: Steven E. Pav
+# Copyright 2016-2016 Steven E. Pav. All Rights Reserved.
+# Author: Steven E. Pav
 
-# getAnywhere('print.htest') 
+# This file is part of BWStest.
+#
+# BWStest is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# BWStest is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Lesser General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with BWStest.  If not, see <http://www.gnu.org/licenses/>.
 
 #' @title Perform the Baumgartner-Weiss-Schindler hypothesis test.
 #'
